# primetrade-task

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  schema.sql
backend/alembic/: env.py
backend/alembic/versions/: 20260422_0001_initial_schema.py
backend/app/: __init__.py  config.py  database.py  dependencies.py  main.py
backend/app/models/: __init__.py  enums.py  task.py  user.py
backend/app/routers/: __init__.py  auth.py  tasks.py  users.py
backend/app/schemas/: __init__.py  task.py  token.py  user.py
backend/app/services/: __init__.py  auth_service.py  task_service.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/login/: LoginClient.tsx  page.tsx
frontend/src/app/register/: page.tsx
frontend/src/components/: Navbar.tsx  StatusMessage.tsx  TaskCard.tsx  TaskForm.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/lib/: api.ts  types.ts
